--- a/ztfnuclear/templates/bad_query.html
+++ b/ztfnuclear/templates/bad_query.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-auto me-auto">
           {% if rej_reason == 'not_valid' %}
-           <h1> {{ bad_id }} is not a valid ZTF ID. </h1>
+           <h1> {{ bad_id }} is not a valid ZTF ID or TNS name. </h1>
           {% else %}
             <h1> {{ bad_id }} is not present in the sample. </h1>
           {% endif %}
