--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -225,19 +225,19 @@
             </div>
             <div class="row">
                 <h5 style="color:#787878;">
-                   risetime: {{ "{:,.3f}".format(tde_fitres['paramdict']['risetime']) }}
+                   risetime: {{ "{:,.0f}".format(10**tde_fitres['paramdict']['risetime']) }} days
                 </h5>
             </div>
         </div>
         <div class="col">
             <div class="row">
                 <h5 style="color:#787878;">
-                   decaytime: {{ "{:,.3f}".format(tde_fitres['paramdict']['decaytime']) }}
+                   decaytime: {{ "{:,.0f}".format(10**tde_fitres['paramdict']['decaytime']) }} days
                 </h5>
             </div>
             <div class="row">
                 <h5 style="color:#787878;">
-                   temperature: {{ "{:,.3f}".format(tde_fitres['paramdict']['temperature']) }}
+                   temperature: {{ "{:,.0f}".format(10**tde_fitres['paramdict']['temperature']) }} K
                 </h5>
             </div>
         </div>
