--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -93,7 +93,7 @@
         <div class="row">
             {% if transient.z != None %}
                     <h5 style="color:#787878;">
-                      z: {{ "{:,.4f}".format(transient.z) }} (dist: {{ "{:,.4f}".format(transient.z_dist) }} arcsec) 
+                      z: {{ "{:,.4f}".format(transient.z) }} +/- {{ transient.z_precision }} (dist: {{ "{:,.4f}".format(transient.z_dist) }} arcsec) 
                     </h5>
             {% else %}
                     <h5 style="color:#C9C9C9;">
