--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -55,12 +55,12 @@
                 {% if flaring == True %}
                 <li class="page-item"><a class="page-link" href="/flaring/{{ previous_transient }}" style="color:#6c3483;">Previous</a></li>
                 {% else %}
-                <li class="page-item"><a class="page-link" href="/transients/{{ previous_transient }}" style="color:#6c3483;">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="/transient/{{ previous_transient }}" style="color:#6c3483;">Previous</a></li>
                 {% endif %}
                 {% if flaring == True %}
                 <li class="page-item"><a class="page-link" href="/flaring/{{ next_transient }}" style="color:#6c3483;">Next</a></li>
                 {% else %}
-                <li class="page-item"><a class="page-link" href="/transients/{{ next_transient }}" style="color:#6c3483;">
+                <li class="page-item"><a class="page-link" href="/transient/{{ next_transient }}" style="color:#6c3483;">
                 Next</a></li>
                 {% endif %}
               </ul>
