tde selection now accessible in web view

--- a/ztfnuclear/templates/navbar.html
+++ b/ztfnuclear/templates/navbar.html
@@ -33,6 +33,9 @@
                 <a class="nav-link" href="{{ url_for('list_golden')}}">🥇Gold</a>
               </li>
               <li class="nav-item ">
+                <a class="nav-link" href="{{ url_for('list_tde_selection')}}">🌠TDE selection</a>
+              </li>
+              <li class="nav-item ">
                 <a class="nav-link" href="{{ url_for('list_interesting')}}">🟢 Interesting</a>
               </li>
               <li class="nav-item ">
