--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -82,10 +82,12 @@
         {% else %}
         <button type="button" class="btn btn-outline-dark" disabled>TNS</button>
         {% endif %}
+          <a class="btn btn-outline-dark" href="{{ url_for('static', filename=filename) }}">
+             Download
+          </a>
         </div>
     </div>
 </div>
-
 
 <div class="container">
   <div class="row">
