--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -82,9 +82,6 @@
         {% else %}
         <button type="button" class="btn btn-outline-dark" disabled>TNS</button>
         {% endif %}
-          <a class="btn btn-outline-dark" href="{{ url_for('static', filename=filename) }}">
-             Download
-          </a>
         </div>
     </div>
 </div>
@@ -146,6 +143,11 @@
                       SALT fit red_chisq: --- 
                     </h5>
             {% endif %}
+        </div>
+        <div class="col">
+          <a class="btn btn-primary" href="{{ url_for('static', filename=filename) }}">
+             Download light curve
+          </a>
         </div>
     </div>
     <div class="col">
